
.. Author notes: this file is formatted with restructured text
   (http://docutils.sourceforge.net/docs/user/rst/quickstart.html).
   The changelog style is adapted from Apache Lucene.

Next Version

API Chnages:
  * util-app: Flaggable is now an Abstract Trait for Java compatibility

6.x

6.22.2  2014-10-29

  * util, finagle: add missing @RunWith annotation
  * Java tests for Duration, Time and Timer
  * util-core: remove Sieve example
  * Reader.writable.fail: make reentrant
  * util-app: add an option so that we can let apps fail fast if reading argument before args are parsed.
  * {finagle,util}-core: Slurry of PartialFunction micro-optimizations

API Changes:
  * util-core: Removed `Sieve` example.
  * util-core: Introduce new constructors and extractors for Buf types to
               support more efficient, correct uses.  Buf types now come with
	       Copied and Direct management interfaces -- Direct tries to
	       provide direct access to the Buf's backing byte array, while 
	       Copied ensures that the caller cannot accidentally mutate a Buf's
	       data. Additionally, helpers to support Buf-type coersion have
	       been added.

6.22.1  2014-10-23

Bug Fixes:
  * util and finagle: fix compiler warnings

Deprecation:
  * util-core: Add deprecation of RingBuffer to changelog
  * util-core: Removed IVar and IVarField 

Documentation:
  * util-core: Clarify Scaladoc of `Promise.attached`
  * util-core: Add self-type to `Promise.Detachable` and augment Promise Scaladocs
  * util-io: Better names for Buf.slice() paramters.

New Features:
  * util-app: Add App registration
  * util-cache Add asynchronous cache with TTL 
  * util-core: Add `Activity.future`

Package factoring:
  * util-logging: factor out testing code into new package util-test

6.22.0  2014-10-13

System Requirements:
  * util-core: prefer Await.result(future.liftToTry) to deprecated methods
  * c.t.util.Time: Scope Locals with `Local.let` instead of `save`+`restore`
