@@ -7,6 +7,7 @@ Next Version
 
 API Chnages:
   * util-app: Flaggable is now an Abstract Trait for Java compatibility
+  * util-core: Rename Buf._.Unsafe to Buf._.Owned and Buf._.Copied to Buf._.Shared
 
 6.x
 
